--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projekt SK8</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
       <div class="logo-container">
-        <img src="images/logo.png" alt="Logo" class="logo">
+        <img src="logo.png" alt="Logo" class="logo">
         <span class="site-title">Projekt SK8</span>
       </div>
 
@@ -53,7 +53,8 @@
     <p>&copy; 2025 Teasy – Projekt SK8</p>
   </footer>
 
-  <script src="js/script.js"></script>
-  <script src="js/burger.js"></script>
+  <script src="script.js"></script>
+  <script src="burger.js"></script>
 </body>
+
 </html>
