--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <div class="header-content" id="home">
-      <h1>Krass, dass du da bist, Sk8er BOI 🛹</h1>
+      <h1>Salton, Sk8er🛹</h1>
       <p>Hier gibt es bald mehr Infos</p>
     </div>
   </header>
