--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="#home">Start</a></li>
         <li><a href="#about">Über</a></li>
         <li><a href="#contact">Kontakt</a></li>
+        <li><a href="#fish">Fisch</a></li>
       </ul>
     </nav>
 
@@ -58,3 +59,4 @@
 </body>
 
 </html>
+
