--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="header-content" id="home">
-      <h1>Salton, Sk8er🛹</h1>
+      <h1>Moin Moin🛹</h1>
       <p>Hier gibt es bald mehr Infos</p>
     </div>
   </header>
@@ -56,6 +56,7 @@
 
   <script src="script.js"></script>
   <script src="burger.js"></script>
+
 
 
 
